--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
     "@react-navigation/bottom-tabs": "^7.3.2",
-    "@react-navigation/native": "^7.0.18",
-    "@react-navigation/native-stack": "^7.3.2",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "axios": "^0.21.1",
+    "expo-image-picker": "^16.0.6",
+    "firebase": "^11.6.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-reanimated": "^3.17.4",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
